k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autopilot-back
  namespace: autopilot
  labels:
    app: autopilot-back
spec:
  selector:
    app: autopilot-back
  ports:
    - name: http
      port: 3003
      targetPort: 3003
  type: ClusterIP
